--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -4,6 +4,31 @@
 
 }
 
+/*homepage*/
+.masthead_home {
+    height: 100vh;
+    min-height: 500px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    color: white;
+}
+
+.showcase .showcase-text {
+    padding: 3rem;
+}
+
+.showcase .showcase-img {
+    min-height: 30rem;
+    background-size: cover;
+}
+
+@media (min-width: 768px) {
+    .showcase .showcase-text {
+        padding: 7rem;
+    }
+}
+
 #wiki_header {
 
     margin: 10px 0px;
