--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -4,6 +4,15 @@
 
 }
 
+.masthead {
+    height: 75vh;
+    min-height: 500px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    color: white;
+}
+
 /*homepage*/
 .masthead_home {
     height: 100vh;
@@ -40,4 +49,35 @@
     width: 100%;
     height: 100%;
 
+}
+
+/* side bar*/
+
+.sidebar {
+    height: 100%;
+    width: 260px;
+    position: absolute;
+    z-index: 1;
+    top: auto;
+    left: 0;
+    background-color: black;
+    overflow-x: hidden;
+    padding-top: 16px;
+}
+
+.sidebar a {
+    padding: 6px 8px 6px 16px;
+    text-decoration: none;
+    font-size: 20px;
+    color: #818181;
+    display: block;
+}
+
+.sidebar a:hover {
+    color: #f1f1f1;
+}
+
+.main {
+    margin-left: 260px; /* Same as the width of the sidenav */
+    padding: 0px 10px;
 }
